--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Homework 7</title>
+		<link type="text/css" rel="stylesheet" href="main.css" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<body>
 
-
+	  <script src="main.js"></script>
 	</body>
 </html>
