Styles responsive webpage

--- a/index.html
+++ b/index.html
@@ -3,12 +3,28 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Homework 7</title>
+    <!-- Main CSS -->
 		<link type="text/css" rel="stylesheet" href="main.css" />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Fredericka+the+Great&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 
 	<body>
+    <header>
+      <h1>Hello. Welcome to:</h1>
+    </header>
 
-	  <script src="main.js"></script>
+    <main>
+      <div class="blue-line"></div>
+      <div class="purple-line"></div>
+      <p>The weather today is:</p>
+    </main>
+
+    <footer>
+      <p>Have a great day!</p>
+    </footer>
+    <!-- Main JS -->
+    <script src="main.js"></script>
 	</body>
 </html>
