--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
 	</head>
 
 	<body>
-    <header>
-      <h1>Hello. Welcome to:</h1>
+    <header id="heading">
+      <h1>Hello. Welcome to: &nbsp;</h1>
     </header>
 
     <main>
       <div class="blue-line"></div>
       <div class="purple-line"></div>
-      <p>The weather today is:</p>
+      <div id="main-section">
+        <p id="p1">The weather today is: &nbsp;</p>
+      </div>
     </main>
 
     <footer>
